# lab1sem2

./: .gitignore  CMakeLists.txt  Complex.c  Complex.h  Double.c  Double.h  Integer.c  Integer.h  Interface.c  Interface.h  LinearForm.c  LinearForm.h  LinearFormErrors.h  TypeInfo.h  Vector.c  Vector.h  VectorErrors.h  main.c  test.c
